animation in sections

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       rel="stylesheet"
     />
 
-    <title>My Portfolio</title>
+    <title>Sourav Saha</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
